Closed Bug 1597417 Opened 4 years ago Closed 4 years ago

Fix uses of DragDataProducer::Produce in dom/base/nsContentAreaDragDrop.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Fission Milestone M6
Tracking Status
firefox73 --- fixed

People

(Reporter: djvj, Assigned: evilpie)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

In file dom/base/nsContentAreaDragDrop.cpp

Retrieves DocShellTreeItem for window (mWindow)

Checks ItemType

Change to using BrowsingContext ItemType.

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Assignee: nobody → evilpies
Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/fa79d18ffe93
Remove nsIDocShellTreeItem from nsContentAreaDragDrop.cpp. r=smaug
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: