Bug 1597417 - Remove nsIDocShellTreeItem from nsContentAreaDragDrop.cpp. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D57496